remove navbar component

--- a/src/index.html
+++ b/src/index.html
@@ -69,10 +69,9 @@
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
-    <!-- build:js({.tmp,src`}) scripts/app.js -->
+    <!-- build:js({.tmp,src}) scripts/app.js -->
     <!-- inject:js -->
     <script src="app/index.js"></script>
-    <script src="components/navbar/navbar.controller.js"></script>
     <script src="app/services/store.js"></script>
     <script src="app/services/cover.js"></script>
     <script src="app/main/menu.controller.js"></script>
