--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,11 @@
     <!-- endinject -->
     <!-- endbuild -->
 
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-
     <!-- build:js scripts/modernizr.js -->
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body>
+  <body layout="row">
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
