web font timeout and fallback

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,8 @@
     <script>
     WebFont.load({
       google: {
-        families: ['NTR']
+        families: ['NTR'],
+        imeout: 2000
       }
     });
     </script>
