--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="colorRelease - discover new release by artwork color" />
 
     <!-- build:css({.tmp,src}) styles/app.css -->
-    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/angular-material/0.7.0/angular-material.min.css" />
     <link rel="stylesheet" href="app/index.css">
     <!-- endbuild -->
 
@@ -33,17 +33,17 @@
       ga('create','UA-8230755-14');ga('send','pageview');
     </script>
 
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-animate.min.js"></script>
     <!-- build:js scripts/vendor.js -->
-    <script src="../bower_components/zepto/zepto.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-aria/angular-aria.js"></script>
-    <script src="../bower_components/angular-animate/angular-animate.js"></script>
-    <script src="../bower_components/hammerjs/hammer.js"></script>
-    <script src="../bower_components/angular-material/angular-material.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="../bower_components/color-thief/dist/color-thief.min.js"></script>
     <!-- endbuild -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.4/hammer.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-material/0.7.0/angular-material.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
