meta data and image threold

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>colorRelease</title>
-    <meta name="description" content="discover new release by artwork color">
+
+    <meta name="description" content="discover new released albums by artwork color">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <meta property="og:description" content="discover new released albums by artwork color" />
+    <meta property="og:title" content="colorRelease" />
+    <meta property="og:site_name" content="littletouch" />
+    <meta property="og:image" content="assets/images/colors.gif" />
 
-    <meta property="og:title" content="colorRelease - discover new release by artwork color" />
+    <!-- favicon image by Jimmy Ghaphery CC-BY 3.0 http://digitalnz-dpla.tumblr.com/post/104099898447/gif-it-up-entry-from-jimmy-ghaphery-in-the-united#notes -->
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/angular-material/0.7.0/angular-material.min.css" />
     <!-- build:css({.tmp,src}) styles/app.css -->
